# reimagined-dots

./: AppButton.qml  AppLauncher.qml  BackgroundWindow.qml  DockSeparator.qml  MediaPopup.qml  NotificationCard.qml  NotificationCenterPopup.qml  README.md  ScreenCapture.qml  WifiWidget.qml  WorkspaceAppButton.qml  flake.nix  install.sh  list-apps.py  list-apps.sh  list-recent.py  mpris-test.qml  resolve-icon.py  toggle-launcher.sh
.config/hypr/: hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  lock-status.sh  lock.sh
.config/kitty/: kitty.conf
.config/matugen/: apply-kde.sh  apply-kitty.sh  config.toml
.config/quickshell/: AppButton.qml  AppLauncher.qml  BackgroundWindow.qml  CalendarPopup.qml  ChromeLock.qml  ClipboardPopup.qml  ClockWidget.qml  FloatingWindowState.qml  MediaPopup.qml  NotificationCard.qml  (+31 more)
.config/quickshell/accounts/: .gitignore  CMakeLists.txt  accountctl.sh  build.sh  google_client_id  update_system_avatar.sh
.config/quickshell/accounts/src/: AccountManager.cpp  AccountManager.h  AccountProvider.h  GoogleAccountProvider.cpp  GoogleAccountProvider.h  GoogleOAuthService.cpp  GoogleOAuthService.h  GoogleProfile.cpp  GoogleProfile.h  GoogleProvider.cpp  GoogleProvider.h  ProviderState.h  SecretStore.cpp  SecretStore.h  main.cpp
.config/quickshell/launcher/: .gitignore  CMakeLists.txt  appctl.sh  build.sh
.config/quickshell/launcher/src/: AppDiscovery.cpp  AppDiscovery.h  DesktopEntry.cpp  DesktopEntry.h  IconResolver.cpp  IconResolver.h  main.cpp
scripts/: install_arch.sh  install_debian.sh  install_fedora.sh  install_nixos.sh
(+34 files in other folders)
